syntax ="proto3";

package greetpb;

// option go_package = "greetpnb";

message Greeting {
string first_name =1;
string last_name = 2;
}


message GreetManyTimesRequest {
  Greeting greeting =1;
}

message GreetManyTimesResponse {
      string result =1;
}


service GreetService {
rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};
}
